<resources>
    <string name="app_name">CLASS CONNECT</string>
    <string name="login_icon">Login Icon</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="show_password">Show Password</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="reset">Reset</string>
    <string name="group">Group</string>
    <string name="chat">Chat</string>
    <string name="memo">Memo</string>
    <string name="create_group">Create Group</string>
    <string name="log_out">Log Out</string>
    <string name="atc_logo">ATC Logo</string>
    <string name="group_name">Group Name</string>
    <string name="level">Level</string>
    <string name="module">Module</string>
    <string name="user_dp">User Dp</string>
    <string name="user_name">User Name</string>
    <string name="module_name">Module Name</string>
    <string name="next">NEXT</string>
    <string name="cancel">Cancel</string>
    <string name="module_code">Module Code</string>
    <string name="full_name">Full Name</string>
    <string name="admission_number">Admission Number-ID</string>
    <string name="phone_number">Phone Number</string>
    <string name="upload_user_profile">Upload User Profile</string>
    <string name="upload_your_photo_here">Upload Your Photo Here</string>
    <string name="type_her_to_chat">Type Here To Chat</string>
    <string name="send_chat_button">Send chat Button</string>
    <string name="send_chat_btn">Send Chat Btn</string>
    <string name="chats">Chats</string>
    <string name="new_group">New Group</string>
    <string name="date_and_time">Date and Time</string>
    <string name="okay">OKAY</string>
    <string name="back">BACK</string>
    <string name="chatting_with">Almost there Erick\n</string>
    <string name="search">Search</string>
    <string name="name">Name</string>
    <string name="arusha_technical_college">ARUSHA TECHNICAL COLLEGE\nCLASS CONNECT</string>
    <string name="please_enter_your_email">Please enter your email.</string>
    <string name="welcome">Welcome</string>
    <string name="enter_email">Enter Email</string>
    <string name="group_icon">Group_icon</string>
    <string name="change_profile_photo">Change Profile Photo</string>
    <string name="username">Username</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_admission_number">Enter Admission Number</string>
    <string name="save_changes">Save Changes</string>
    <string name="profile">Profile</string>
    <string name="profile_details">Profile Details</string>
    <string name="upload_photo">UPLOAD PHOTO</string>
    <string name="profile_picure">Profile Picure</string>
    <string name="hello_world_it_erick">Hello World,It Erick</string>
    <string name="sms">SMS</string>
    <string name="sms_section">SMS Section</string>
    <string name="here_admin_should_see_all_option_for_adminsttrator">Here admin should see all option for adminsttrator</string>
    <string name="admin">Admin</string>
</resources>