<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <item
        android:id="@+id/createGroup"
        android:title="@string/create_group"
        android:tooltipText="New Group"
        android:icon="@drawable/group_icon_add"
        app:showAsAction="ifRoom"
        android:contentDescription="@string/new_group"
        />

    <item
        android:id="@+id/Profile"
        android:title="@string/profile"
        android:icon="@drawable/profile_icon"
        app:showAsAction="collapseActionView"
        android:contentDescription="@string/profile_details"/>

    <item
        android:id="@+id/sms"
        android:title="@string/sms"
        android:icon="@drawable/sms_icon"
        app:showAsAction="collapseActionView"
        android:contentDescription="@string/sms_section"/>

    <item
        android:id="@+id/adminPage"
        android:title="@string/admin"
        android:icon="@drawable/admini_icon"
        app:showAsAction="collapseActionView"
        android:contentDescription="@string/admin"
        />

    <item
        android:id="@+id/logout"
        android:title="@string/log_out"
        android:icon="@drawable/logout_icon"
        app:showAsAction="collapseActionView"
        android:contentDescription="@string/log_out"/>


</menu>