<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgerick"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".authetication.Login">

    <TextView
        android:id="@+id/TitleAtc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="@string/arusha_technical_college"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        android:textStyle="bold" />

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/logoLayout">
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/atclogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/atc_logo"
        android:src="@drawable/a"
        android:elevation="3dp"/>
</LinearLayout>
    <androidx.cardview.widget.CardView
        android:id="@+id/cv_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:background="@android:color/white"
        app:cardCornerRadius="8dp"
        app:cardElevation="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/TitleWelcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="2dp"
                android:shadowColor="@color/atcgreenish"
                android:text="@string/welcome"
                android:textAlignment="center"
                android:textColor="@color/atcgreenish"
                android:textSize="30sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />


            <EditText
                    android:id="@+id/editTextLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:imeOptions="actionGo"
                    android:inputType="textEmailAddress"
                    android:textColor="#363A43"
                    android:textColorHint="#7A8089"
                    android:textSize="24sp"
                android:autofillHints=""
                tools:ignore="VisualLintTextFieldSize" />




                <EditText
                    android:id="@+id/editTextPasswordLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:imeOptions="actionGo"
                    android:inputType="textPassword"
                    android:textColor="#363A43"
                    android:textColorHint="#7A8089"
                    android:textSize="24sp"
                    android:autofillHints="" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/showPasswordCheckbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:text="@string/show_password"
                    tools:ignore="TouchTargetSizeCheck" />

                <TextView
                    android:id="@+id/textViewForgot_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:paddingEnd="10dp"
                    android:text="@string/forgot_password"
                    android:textAlignment="textEnd"
                    android:textColor="@color/darkerred"
                    android:textSize="18sp"
                    tools:ignore="RtlSymmetry,TouchTargetSizeCheck,TextContrastCheck" />
            </LinearLayout>


            <Button
                android:id="@+id/buttonLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/material_dynamic_primary0"
                android:backgroundTint="#E6B501"
                android:text="@string/login"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewSignup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:paddingTop="15dp"
                android:text="@string/sign_up"
                android:textAlignment="textEnd"
                android:textColor="#FFBF13"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck,TouchTargetSizeCheck"

                />
        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>