<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="@drawable/bgerickkn">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables"
        android:background="@drawable/ribbonred"
        android:backgroundTintMode="add"
        android:backgroundTint="@color/black">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/groupDp"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/group_icon"
            android:src="@drawable/userdp_24" />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginStart="16dp"
            android:gravity="start">

            <TextView
                android:id="@+id/groupNameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:textStyle="bold"
                android:textColor="@color/white"

                android:hint="@string/group_name"/>

            <TextView
                android:id="@+id/levelTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/level"
                android:textColor="@color/white"
                android:textStyle="normal"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/moduleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/module"
                android:textColor="@color/white"
                android:textStyle="normal"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
