<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardCornerRadius="5dp"
    android:elevation="2dp"
    app:contentPadding="5dp"
    android:background="@drawable/bgerick">
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables"
        android:background="@drawable/ribbonred"
        >

         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/userDpChat"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:contentDescription="@string/user_dp"
             android:src="@drawable/userdp_24"
             tools:ignore="ImageContrastCheck" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginStart="16dp">

            <TextView
                android:id="@+id/userNameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_name"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/white"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/ModuleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/white"
                android:textStyle="normal"
                tools:ignore="TextContrastCheck" />


        </LinearLayout>


    </LinearLayout>


</androidx.cardview.widget.CardView>
