<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgerickk"
    android:gravity="center"
    android:orientation="vertical"
    >


    <TextView
        android:id="@+id/resetbacklogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="12dp"
        android:paddingBottom="15dp"
        android:paddingEnd="3dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/login"
        android:textColor="#E91E63"
        android:textSize="26sp"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/login_back_icon_reset_pass" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cv_forgot_email_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="2dp"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="#FE9B00"
            >
            <EditText
                android:layout_marginTop="10dp"
                android:id="@+id/email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:drawableStart="@drawable/email_icon"
                android:hint="@string/enter_email"
                android:inputType="textEmailAddress"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textSize="40sp"
               android:textColorHint="@color/white"
                android:textColor="@color/white"
                tools:ignore="TextContrastCheck"
                android:background="@color/orageGtc"
                />
            <View
                android:layout_width="0dp"
                android:layout_height="3dp"
                android:background="@color/atcorange"/>
            <Button
                android:id="@+id/reset_password_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/lock_open_icon"
                android:text="@string/reset"
                android:backgroundTint="#4CAF50"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:elevation="1dp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
